// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-card-wrap"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 2`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-card-heading-wrap"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 3`] = `
<DocumentFragment>
  <h5
    class="mocked-styled-3 el-card-heading"
  >
    <div>
      I am a child
    </div>
  </h5>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 4`] = `
<DocumentFragment>
  <h6
    class="mocked-styled-4 el-card-sub-heading"
  >
    <div>
      I am a child
    </div>
  </h6>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 5`] = `
<DocumentFragment>
  <h6
    class="mocked-styled-5 el-card-sub-heading-additional"
  >
    <div>
      I am a child
    </div>
  </h6>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 6`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-card-main-wrap"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 7`] = `
<DocumentFragment>
  <div
    class="mocked-styled-6 el-card-body-wrap"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 8`] = `
<DocumentFragment>
  <div
    class="mocked-styled-8 el-card-avatar-wrap el-card-image-wrap el-card-avatar-wrap"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 9`] = `
<DocumentFragment>
  <div
    class="mocked-styled-7 el-card-avatar-wrap"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 10`] = `
<DocumentFragment>
  <div
    class="mocked-styled-9 el-card-list"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 11`] = `
<DocumentFragment>
  <div
    class="mocked-styled-10 el-card-list-main-wrap"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 12`] = `
<DocumentFragment>
  <h5
    class="mocked-styled-11 el-card-list-heading"
  >
    <div>
      I am a child
    </div>
  </h5>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 13`] = `
<DocumentFragment>
  <h6
    class="mocked-styled-12 el-card-list-sub-heading"
  >
    <div>
      I am a child
    </div>
  </h6>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 14`] = `
<DocumentFragment>
  <div
    class="mocked-styled-13 el-card-list-item"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 15`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-card-list-item-text-wrap"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 16`] = `
<DocumentFragment>
  <div
    class="mocked-styled-15 el-card-list-item-text-primary"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 17`] = `
<DocumentFragment>
  <div
    class="mocked-styled-16 el-card-list-item-text-secondary"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card > should match a snapshot and render children 18`] = `
<DocumentFragment>
  <div
    class="mocked-styled-17 el-card-list-icon"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;
